--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header>
-    
+  <!-- HEADER -->
+  <header class="debug2">
+    <div class="container debug1">
+      <div> LOGO</div>
+      <div class="right-menu">MENU</div>
+      <ul>
+        <li>PROVA</li>
+        <li>PROVA</li>
+        <li>PROVA</li>
+        <li>PROVA</li>
+        <li>PROVA</li>
+      </ul>
+    </div>
   </header>
-  
+  <!----------->
   <main>
-   
+   <section class="demo container">
+
+   </section>
   </main>
 
   <footer>
