--- a/index.html
+++ b/index.html
@@ -25,10 +25,21 @@
     </div>
   </header>
   <!----------->
+  <!-- MAIN --->
   <main>
-   <section class="demo container">
 
+    <!-- section1 -->
+   <section class="demo container">
+      <div class="card big debug1">
+        <div class="left">
+        <h3>Get a Demo Application</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore necessitatibus quasi minima quia, odit asperiores aperiam iure eligendi cum quisquam.</p>
+        <a href="#">APP STORE</a>
+        </div>
+        <div class="img-placeholder"></div>
+      </div>
    </section>
+   <!--------------->
   </main>
 
   <footer>
