--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
         </div>
         <div class="img-placeholder"></div>
       </div>
+
+      <div class="card small debug1">
+        <div class="img-placeholder"></div>
+        <h3>Clean Code</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum eius temporibus ullam, odio ipsum inventore libero provident in placeat illo.</p>
+      </div>
+
+      <div class="card small debug1">
+        <div class="img-placeholder"></div>
+        <h3>Clean Code</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum eius temporibus ullam, odio ipsum inventore libero provident in placeat illo.</p>
+      </div>
+
+      <div class="card small debug1">
+        <div class="img-placeholder"></div>
+        <h3>Clean Code</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum eius temporibus ullam, odio ipsum inventore libero provident in placeat illo.</p>
+      </div>
+
+      <div class="card small debug1">
+        <div class="img-placeholder"></div>
+        <h3>Clean Code</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum eius temporibus ullam, odio ipsum inventore libero provident in placeat illo.</p>
+      </div>
    </section>
    <!--------------->
   </main>
