--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
       </div>
    </section>
    <!--------------->
+
+   <!-- section2 -->
+   <section class="planning container">
+    <div class="left">
+      <div class="img-placeholder2"></div>
+      <h2>Strategic Planning</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat repudiandae velit veniam beatae illum? Debitis illo laudantium magni nesciunt eum corporis deserunt esse laborum laboriosam illum hic numquam rerum architecto temporibus porro minima exercitationem, iusto non modi. Id harum animi nemo, illum explicabo, ex et tenetur necessitatibus cumque asperiores facilis!</p>
+    </div>
+
+    <div class="right debug2"> 
+      <div class="img-placeholder2"></div>
+      <h3> App Developement</h3>
+      <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+      <div class="fontawesome"></div>
+    </div>
+    
+   </section>
+   <!--------------->
+
+   
   </main>
 
   <footer>
