--- a/index.html
+++ b/index.html
@@ -83,7 +83,39 @@
    </section>
    <!--------------->
 
-   
+   <!-- section3 -->
+   <section class="testimonial container">
+     <h3>TESTIMONIALS</h3>
+     <h2>We Are Committed Expert partners</h2>
+     <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
+     <div class="testimonial card debug3">
+      <div class="img-placeholder2"></div>
+      <div class="card-text">
+        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae incidunt facilis est similique tenetur consequatur fuga commodi sint qui, nulla perspiciatis, ratione repellendus illum assumenda!"</p>
+        <span>NAT REYNOLDS</span>
+      </div>
+     </div>
+
+     <div class="testimonial card debug3">
+      <div class="img-placeholder2"></div>
+      <div class="card-text">
+        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae incidunt facilis est similique tenetur consequatur fuga commodi sint qui, nulla perspiciatis, ratione repellendus illum assumenda!"</p>
+        <span>NAT REYNOLDS</span>
+      </div>
+     </div>
+
+     <div class="testimonial card debug3">
+      <div class="img-placeholder2"></div>
+      <div class="card-text">
+        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae incidunt facilis est similique tenetur consequatur fuga commodi sint qui, nulla perspiciatis, ratione repellendus illum assumenda!"</p>
+        <span>NAT REYNOLDS</span>
+      </div>
+     </div>
+
+
+   </section>
+   <!--------------->
+
   </main>
 
   <footer>
