--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
 <!--------------------------->
 <!-- FOOTER------------------>
   <footer>
+    <div class="container"> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt sapiente quidem ratione dolorem! Modi, ipsa ratione?</p>
+      <p><a href="">Lorem ipsum</a> Lorem, ipsum dolor. <a href="">Boolean careers</a></p></div>
     
   </footer>
 <!--------------------------->
