--- a/index.html
+++ b/index.html
@@ -7,20 +7,25 @@
 <!-- FONTAWESOME -->
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
 <!-- /FONTAWESOME -->
+<!-- FONT -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <!-- /FONT -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 <!-- HEADER -->
-  <header class="debug2">
-    <div class="container debug1">
-      <div> LOGO</div>
-      <div class="right-menu">MENU</div>
+  <header>
+    <div class="container">
+      <div> <img src="assets/img/logo.png" alt=""></div>
+      <div class="right-menu"><i class="fa-solid fa-bars"></i></div>
       <ul>
-        <li>PROVA</li>
-        <li>PROVA</li>
-        <li>PROVA</li>
-        <li>PROVA</li>
-        <li>PROVA</li>
+        <li> <a href="">Planning</a></li>
+        <li> <a href="">Testimonials</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="" class="btn">Get Started</a></li>
       </ul>
     </div>
   </header>
