--- a/index.html
+++ b/index.html
@@ -196,22 +196,26 @@
    <!--------------->
 
    <!-- section6 -->
-   <section class="get-started container">
-    <h5>GET STARTED</h5>
-    <h3>Simple, transparent Pricing</h3>
-    <h2>It's Free!</h2>
-    <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.</p>
+   <section class="get-started">
+    <div class="container">
+      <h5>GET STARTED</h5>
+      <h3>Simple, transparent Pricing</h3>
+      <h2>It's Free!</h2>
+      <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.</p>
 
-    <a href="">BIG BUTTON</a>
-    <span>Copyright 2021 Boolean . classe XX . <a href="">Privacy policy</a> </span>
+      <a href=""><span>G e t</span> <span> S t a r t e d</span></a>
+      <span>Copyright 2021 Boolean . classe XX . <a href="">Privacy policy</a> </span>
+    </div>
    </section>
    <!--------------->
   </main>
 <!--------------------------->
 <!-- FOOTER------------------>
   <footer>
-    <div class="container"> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt sapiente quidem ratione dolorem! Modi, ipsa ratione?</p>
-      <p><a href="">Lorem ipsum</a> Lorem, ipsum dolor. <a href="">Boolean careers</a></p></div>
+    <div class="container">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt sapiente quidem ratione dolorem! Modi, ipsa ratione?</p>
+      <p><a href="">Lorem ipsum</a> Lorem, ipsum dolor. <a href="">Boolean careers</a></p>
+    </div>
     
   </footer>
 <!--------------------------->
